Make the heade navbar and footer full-screen width Fix some alignment things in the footer

--- a/app/assets/stylesheets/public_additions.scss
+++ b/app/assets/stylesheets/public_additions.scss
@@ -15,5 +15,11 @@
 .navbar-dark .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
-
 // END HEADER
+
+.container-no-padding {
+  @extend .container-fluid;
+  padding-right: 0px;
+  padding-left: 0px;
+  overflow: hidden;
+}
